--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -43,7 +43,44 @@
         </nav>
   </header>
   <main class="main">
+        <!-- Contato Section -->
+      <section class="glass-container py-5" style="height: 900px">
+        <div class="row">
+          <div class="col-lg-6">
+            <h2>Entre em Contato</h2>
+            <p>Entre em contato conosco para mais informações sobre nossos cursos ou para qualquer dúvida:</p>
+            <form>
+              <div class="form-group">
+                <label for="name">Nome:</label>
+                <input type="text" class="form-control" id="name" placeholder="Digite seu nome">
+              </div>
+              <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" class="form-control" id="email" placeholder="Digite seu email">
+              </div>
+              <div class="form-group">
+                <label for="message">Mensagem:</label>
+                <textarea class="form-control" id="message" rows="5" placeholder="Digite sua mensagem"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+          </div>
+          <div class="col-lg-6">
+            <h2>Localização</h2>
+            <p>Visite-nos em nosso endereço:</p>
+            <p>SGCURSOS</p>
+            <p>Rua dos Cursos, 123</p>
+            <p>Cidade, Estado</p>
 
+            <!-- Mapa -->
+              <div id="map" style="height: 300px;">
+                  <iframe scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=2.8348924067306123,-60.690525770187385+(SGCURSOS)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" width="100%" height="600" frameborder="0">
+                      <a href="https://www.maps.ie/distance-area-calculator.html">measure acres/hectares on map</a>
+                  </iframe>
+              </div>
+          </div>
+        </div>
+      </section>
   </main>
   <footer>
     <!-- Conteúdo do footer -->
