--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -42,7 +42,81 @@
         </nav>
   </header>
   <main class="main">
+    <section class="jumbotron glass-container text-center">
+      <div class="glass-container">
+        <h1 class="display-4">Bem-vindo à SGCURSOS</h1>
+        <p class="lead">Aprenda tecnologia com nossos cursos especializados</p>
+        <a href="#" class="btn btn-primary btn-lg">Ver Cursos</a>
+      </div>
+    </section>
 
+    <!-- Cursos Section -->
+    <section class="glass-container">
+      <h2 class="text-center mb-4">Nossos Cursos</h2>
+      <div id="carouselCourses" class="carousel slide" data-ride="carousel" aria-label="Carrossel de Cursos">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselCourses" data-slide-to="0" class="active" aria-label="Slide 1"></li>
+          <li data-target="#carouselCourses" data-slide-to="1" aria-label="Slide 2"></li>
+          <li data-target="#carouselCourses" data-slide-to="2" aria-label="Slide 3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="course1.jpg" class="d-block w-100" alt="Curso de Desenvolvimento Web">
+            <div class="carousel-caption">
+              <h5>Curso de Desenvolvimento Web</h5>
+              <p>Aprenda a criar sites incríveis com as mais recentes tecnologias web.</p>
+              <a href="#" class="btn btn-primary">Saiba Mais</a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="course2.jpg" class="d-block w-100" alt="Curso de Data Science">
+            <div class="carousel-caption">
+              <h5>Curso de Data Science</h5>
+              <p>Descubra insights valiosos a partir de dados com as técnicas de Data Science.</p>
+              <a href="#" class="btn btn-primary">Saiba Mais</a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="course3.jpg" class="d-block w-100" alt="Curso de Desenvolvimento Mobile">
+            <div class="carousel-caption">
+              <h5>Curso de Desenvolvimento Mobile</h5>
+              <p>Crie aplicativos móveis incríveis para iOS e Android.</p>
+              <a href="#" class="btn btn-primary">Saiba Mais</a>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselCourses" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselCourses" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Próximo</span>
+        </a>
+      </div>
+    </section>
+
+
+      <!-- Informações Adicionais -->
+      <section class="glass-container" py-5">
+        <div class="row">
+          <div class="col-lg-6">
+            <h2>Sobre Nós</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel ligula vitae quam dignissim laoreet.
+              Nulla facilisi. Curabitur in mi ac lacus iaculis lobortis. Proin fringilla massa a ipsum viverra ultrices.
+              Aenean quis finibus odio.</p>
+          </div>
+          <div class="col-lg-6">
+            <h2>Contato</h2>
+            <p>Entre em contato conosco para mais informações sobre nossos cursos:</p>
+            <ul>
+              <li>Telefone: (XX) XXXX-XXXX</li>
+              <li>Email: contato@sgcursos.com</li>
+              <li>Endereço: Rua dos Cursos, 123, Cidade, Estado</li>
+            </ul>
+          </div>
+        </div>
+      </section>
   </main>
   <footer>
     <!-- Conteúdo do footer -->
