--- a/Frontend/my-courses.html
+++ b/Frontend/my-courses.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Edição</title>
+    <title>Cursos</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/inputs.css">
@@ -31,56 +31,29 @@
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
                 <li class="nav-item"><a class="nav-link" href="validar.html">Validar</a></li>
               </ul>
-              <form class="d-flex me-auto" onsubmit="search()">
-                <input  id="search-input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Pesquisar</button>
-              </form>
-
-              <div class="user-profile">
+            </div>
+            <div class="user-profile">
                   <a href="login.html" class="button-login">Login</a>
                   <a href="register.html" class="button-register">cadastra-se</a>
               </div>
-            </div>
           </div>
         </nav>
   </header>
   <main class="main">
-      <div class="glass-container" id="header-edit">
-        <div class="row glass-container" id="edit-container"></div>
+      <div class="container text-center" id="course-body" style="min-width: 60%; margin-bottom: 100px">
+          <section id="course-info">
+
+          </section>
       </div>
-          <!--          modal do validador-->
-      <div class="modal fade" id="confirmationModal" tabindex="-1" role="dialog" aria-labelledby="confirmationModalLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="confirmationModalLabel">Confirmação</h5>
-                <button type="button" class="close btn btn-outline-danger" style="border: none" aria-label="Fechar">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <p id="confirmationText"></p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="cancelBtn">Cancelar</button>
-                <button type="button" class="btn btn-primary" id="confirmBtn">Confirmar</button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-    </div>
-
   </main>
 
   <footer>
     <!-- Conteúdo do footer -->
     <p>&copy; 2023 University. Todos os direitos reservados.</p>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-  <script src="assets/js/script.js"></script>
   <script src="assets/js/api.js"></script>
-  <script src="assets/js/edit.js"></script>
+  <script src="assets/js/script.js"></script>
+  <script src="assets/js/my-courses.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
