--- a/Frontend/users.html
+++ b/Frontend/users.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Edição</title>
+    <title>Usuarios</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/inputs.css">
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link active" style=" color: #ffcc00;" aria-current="page" href="courses.html">Cursos</a></li>
+                <li class="nav-item"><a class="nav-link" href="courses.html">Cursos</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
                 <li class="nav-item"><a class="nav-link" href="validar.html">Validar</a></li>
@@ -45,42 +45,33 @@
         </nav>
   </header>
   <main class="main">
-      <div class="glass-container" id="header-edit">
-        <div class="row glass-container" id="edit-container"></div>
+      <div class="glass-container" id="users-header">
+        <div class="row glass-container" id="users-container"></div>
+        <nav aria-label="...">
+          <ul class="pagination" id="pagination">
+            <li class="page-item disabled">
+              <a class="page-link" onclick="previousPage()">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item active" aria-current="page">
+              <a class="page-link" href="#">2</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+              <a class="page-link" onclick="nextPage()">Next</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-          <!--          modal do validador-->
-      <div class="modal fade" id="confirmationModal" tabindex="-1" role="dialog" aria-labelledby="confirmationModalLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="confirmationModalLabel">Confirmação</h5>
-                <button type="button" class="close btn btn-outline-danger" style="border: none" aria-label="Fechar">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <p id="confirmationText"></p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="cancelBtn">Cancelar</button>
-                <button type="button" class="btn btn-primary" id="confirmBtn">Confirmar</button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-    </div>
-
   </main>
 
   <footer>
     <!-- Conteúdo do footer -->
     <p>&copy; 2023 University. Todos os direitos reservados.</p>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-  <script src="assets/js/script.js"></script>
   <script src="assets/js/api.js"></script>
-  <script src="assets/js/edit.js"></script>
+  <script src="assets/js/script.js"></script>
+  <script src="assets/js/users.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
